--- a/hydraulic.v2.8.1
+++ b/hydraulic.v2.8.1
@@ -8,7 +8,7 @@
           "id": "6mYSH1yDOwvw"
         },
         "outputs": [],
-        "source": [
+        "source":  [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
         " \n",
@@ -1380,7 +1380,7 @@
         "    nextpage = -1\n",
         "    previouspage = -1\n",
         "    resultcount = 0\n",
-        "    pagescount = 0\n",
+        "    totalpages = 0\n",
         "    page = 0\n",
         "    pageresultcount = 0\n",
         "    table: panel.widgets.Tabulator = None\n",
@@ -1450,14 +1450,14 @@
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
         "\n",
         "class SearchResult(WebResult):\n",
-        "    def __init__(self, search= \"\", site= X1337X, category= ALLCATEGORIES_TD, attrs= None , results = None, resultcount= 0, pagescount= 0, page= 0, nextpage= -1, previouspage= -1, sort= None) -> None:\n",
+        "    def __init__(self, search= \"\", site= X1337X, category= ALLCATEGORIES_TD, attrs= None , results = None, resultcount= 0, totalpages= 0, page= 0, nextpage= -1, previouspage= -1, sort= None) -> None:\n",
         "        super().__init__()\n",
         "        self.search = search\n",
         "        self.category = category\n",
         "        self.site = site\n",
         "        self.attrs = attrs\n",
         "        self.resultcount = resultcount\n",
-        "        self.pagescount = pagescount\n",
+        "        self.totalpages = totalpages\n",
         "        self.page = page\n",
         "        self.nextpage = nextpage\n",
         "        self.previouspage = previouspage\n",
@@ -1654,7 +1654,7 @@
         "def episode_exists(targetshow, season, searchepisode): \n",
         "    info(f\"Checking if the episode: {searchepisode} is downloaded\")\n",
         "    showsearch = show_exists(targetshow)\n",
-        "    targetepisode = \"\"15\n",
+        "    targetepisode = \"\"\n",
         "    targetpath= \"\"\n",
         "    if showsearch:\n",
         "        targetshow = showsearch['foundname']\n",
@@ -2281,6 +2281,7 @@
         "        result.results = result.resultpages[page]\n",
         "        result.downloadedtitles = result.downloadedtitlespages[page]\n",
         "        result.watchedtitles = result.watchedtitlespages[page]\n",
+        "        result.page = page\n",
         "        result.pageresultcount = len(result.results)\n",
         "        result.previouspage = page - 1\n",
         "        result.nextpage = page + 1 if page + 1 <= result.totalpages else 0\n",
@@ -2332,7 +2333,6 @@
         "        result = IMDBResult()\n",
         "        result.params = params\n",
         "        result.url = url\n",
-        "        appstate.searchresults.append(result)\n",
         "\n",
         "    result.currentpageurl = url\n",
         "    result.request = req \n",
@@ -2348,10 +2348,10 @@
         "        countSearch = re.search(r\"\\d+(?=\\stitles?)\", countText)\n",
         "        if countSearch:\n",
         "            result.resultscount = int(countSearch.group())\n",
-        "            result.pagescount = ceil(result.resultscount/perpage)\n",
-        "            result.nextpage = page + 1 if page + 1 <= result.pagescount else 0      \n",
+        "            result.totalpages = ceil(result.resultscount/perpage)\n",
+        "            result.nextpage = page + 1 if page + 1 <= result.totalpages else 0      \n",
         "        else:\n",
-        "            result.pagescount = 1\n",
+        "            result.totalpages = 1\n",
         "            \n",
         "        titles: list[IMDBTitle]= []\n",
         "        downloaded: list[IMDBTitle]= []\n",
@@ -2635,6 +2635,7 @@
         "    if page in result.resultpages:\n",
         "        result.results = result.resultpages[page]\n",
         "        result.pageresultcount = len(result.results)\n",
+        "        result.page = page\n",
         "        result.previouspage = page - 1\n",
         "        result.nextpage = page + 1 if page + 1 <= result.totalpages else 0\n",
         "    else:\n",
@@ -2673,7 +2674,7 @@
         "        result.page = page\n",
         "        result.previouspage = previouspage\n",
         "        result.nextpage = nextpage\n",
-        "        result.pagescount = totalpages\n",
+        "        result.totalpages = totalpages\n",
         "        result.sort = sort\n",
         "\n",
         "        main_element = soup.find(\"tbody\")\n",
@@ -4126,6 +4127,7 @@
         "                    sites= sites, sitecategory= sitecategory, sitesort= sitesort, siteorder= siteorder, siteparameters= searchparameters,\n",
         "                    attrs= attrs)\n",
         "    result: IMDBResult = searchIMDB(params)\n",
+        "    appstate.searchresults.append(result)\n",
         "    imdbresultview = getsearchresultview(result)\n",
         "    switchview(nav[IMDB_TAB], imdbresultview)\n",
         "\n",
@@ -4677,12 +4679,18 @@
         "searchimdb_button = Button(description= \"Search\", layout= bigbtn_layout, style= bigbtn_style)\n",
         "searchimdb_button.layout.align_self = \"center\"\n",
         "\n",
-        "imdbrsearchview_vbox = VBox((imdbkeyword_hbox, imdbtype_hbox, imdbsort_hbox, imdborder_hbox, imdbstartdate_hbox, imdbenddate_hbox,\n",
-        "                        imdbratings_hbox, imdbvotes_hbox, imdbruntime_hbox, imdbinlist_hbox, imdbnotinlist_hbox, imdbenglishonly_hbox,\n",
-        "                        imdbanimationtitles_hbox, imdbinternationaltitles_hbox, imdbindiantitles_hbox, imdbtop250_hbox, imdbtop1000_hbox,\n",
-        "                        imdboscarwinner_hbox, imdbbestpicturewinner_hbox, imdbbestdirectorwinner_hbox, imdbfilterdownloadded_hbox,\n",
-        "                        imdbfilterwatched_hbox, imdbdownload1337x_hbox, imdbreplaceandmergeoldfiles_hbox, imdbbackup_hbox,\n",
-        "                        imdbsearchparams_hbox, searchimdb_button), layout= formcontent_layout)\n",
+        "\n",
+        "imdbview1collayout = {\"width\": \"50%\", \"height\": \"100%\"}\n",
+        "\n",
+        "imdbrsearchviewcol1_vbox = VBox((imdbkeyword_hbox, imdbtype_hbox, imdbsort_hbox, imdborder_hbox, imdbstartdate_hbox, imdbenddate_hbox,\n",
+        "                                imdbratings_hbox, imdbvotes_hbox, imdbruntime_hbox, imdbinlist_hbox, imdbnotinlist_hbox, imdbsearchparams_hbox), layout= imdbview1collayout)\n",
+        "\n",
+        "imdbrsearchviewcol2_vbox = VBox((imdbdownload1337x_hbox, imdbenglishonly_hbox, imdbanimationtitles_hbox, imdbinternationaltitles_hbox, imdbindiantitles_hbox, imdbtop250_hbox, imdbtop1000_hbox,\n",
+        "imdboscarwinner_hbox, imdbbestpicturewinner_hbox, imdbbestdirectorwinner_hbox, imdbfilterdownloadded_hbox,\n",
+        "imdbfilterwatched_hbox, imdbreplaceandmergeoldfiles_hbox), layout= imdbview1collayout)\n",
+        "\n",
+        "imdbsearchviewinnercontainer_hbox = HBox((imdbrsearchviewcol1_vbox, imdbrsearchviewcol2_vbox), layout= {\"width\": \"100%\", \"height\": \"93%\"})\n",
+        "imdbrsearchview_vbox = VBox((imdbsearchviewinnercontainer_hbox, searchimdb_button), layout= viewcontainer_layout)\n",
         "\n",
         "imdbviewcontainer_vbox = VBox((imdbrsearchview_vbox,), layout= viewcontainer_layout)\n",
         "imdbsearch_vbox = VBox((imdbr1_hbox, imdbviewcontainer_vbox), layout= mainbox_layout)\n",
@@ -4989,10 +4997,10 @@
         "            pagination.insert(0, Button(description= str(result.page - 1), layout= pagebtn_layout)) \n",
         "        if result.page - 1 > 1:\n",
         "            pagination = [Button(description= '1', layout= pagebtn_layout), dots] + pagination\n",
-        "    if result.page < result.pagescount:\n",
+        "    if result.page < result.totalpages:\n",
         "        pagination.append(Button(description= str(result.page + 1), layout= pagebtn_layout))\n",
-        "    if result.page + 1 < result.pagescount:\n",
-        "        pagination += [dots, Button(description= str(result.pagescount), layout= pagebtn_layout)]\n",
+        "    if result.page + 1 < result.totalpages:\n",
+        "        pagination += [dots, Button(description= str(result.totalpages), layout= pagebtn_layout)]\n",
         "    for obj in pagination:\n",
         "        if type(obj) == Button and not obj.disabled:\n",
         "            obj.on_click(result.pagination_handler)\n",
@@ -5007,7 +5015,7 @@
         "        searchtitle_html = HTML(gethtmltext(f\"Search results for: {result.search}\", fontsize= '22px'), layout= {'width': '60%'})\n",
         "        \n",
         "        def pagination_handler(btn): \n",
-        "            page = result.page #int(btn.description)\n",
+        "            page = int(btn.description)\n",
         "            updatesearchresults(result, page= page)\n",
         "\n",
         "        result.pagination_handler = pagination_handler\n",
