--- a/hydraulic.v2.8.2
+++ b/hydraulic.v2.8.2
@@ -2333,10 +2333,11 @@
         "        result = IMDBResult()\n",
         "        result.params = params\n",
         "        result.url = url\n",
+        "        appstate.searchresults.append(result)\n",
         "\n",
+        "    req = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
         "    result.currentpageurl = url\n",
         "    result.request = req \n",
-        "    req = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
         "    if req.status_code == 200:\n",
         "        info(\"\\n IMDB Search Done Successfully.\\n\")\n",
         "        soup = Soup(req.text,'html.parser')    \n",
@@ -2359,26 +2360,35 @@
         "\n",
         "        allitems = main.findAll(class_=\"lister-item\")\n",
         "        for item in allitems:\n",
-        "            year_raw = item.find(class_=\"lister-item-year\").text\n",
-        "            title_raw = item.find(class_=\"lister-item-header\").a.text\n",
-        "            fulltitle = find_title(title_raw, year_raw)\n",
-        "            runtime = item.find(class_=\"runtime\").text.strip()\n",
-        "            rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
-        "            votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
-        "            genres = item.find(class_=\"genre\").text.strip()\n",
-        "            ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\").text\n",
-        "            splt = ppl.split(\"| \\n\")\n",
-        "            directors = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[0])\n",
-        "            staring = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[1])\n",
-        "            title= IMDBTitle(title= fulltitle, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, staring= staring)\n",
-        "            if fulltitle in watched_movies_list:\n",
-        "                title.watched = True\n",
-        "                watched.append(title)\n",
-        "            if movie_exists(fulltitle):\n",
-        "                downloaded.append(title)\n",
-        "                title.downloaded= True\n",
-        "                if not params.filterdownloaded:\n",
-        "                    titles.append(title)         \n",
+        "            try:\n",
+        "                title_raw = item.find(class_=\"lister-item-header\").a.text\n",
+        "                year_raw = item.find(class_=\"lister-item-year\").text\n",
+        "                fulltitle = find_title(title_raw, year_raw)\n",
+        "                runtime = item.find(class_=\"runtime\").text.strip()\n",
+        "                rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
+        "                votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
+        "                genres = item.find(class_=\"genre\").text.strip()\n",
+        "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\").text\n",
+        "                splt = ppl.split(\"| \\n\")\n",
+        "                if len(splt) == 2:\n",
+        "                  directors = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[0])\n",
+        "                  staring = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[1])\n",
+        "                else:\n",
+        "                  directors = \"\"\n",
+        "                  staring = \"\"\n",
+        "                  error(f\"Title people info not found: {' & '.join(splt)}\")\n",
+        "                title= IMDBTitle(title= fulltitle, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, staring= staring)\n",
+        "                if fulltitle in watched_movies_list:\n",
+        "                    title.watched = True\n",
+        "                    watched.append(title)\n",
+        "                if movie_exists(fulltitle):\n",
+        "                    downloaded.append(title)\n",
+        "                    title.downloaded= True\n",
+        "                    if not params.filterdownloaded:\n",
+        "                        titles.append(title) \n",
+        "            except:\n",
+        "                error(ex())\n",
+        "                continue       \n",
         "        result.results = titles\n",
         "        result.resultpages[page] = titles\n",
         "        result.watchedtitles = watched\n",
@@ -2393,6 +2403,7 @@
         "        result.error = f\"AdvancedIMDBSearch: Error accessing the web page. Code error: {req.state_code}\"\n",
         "        error(result.error)\n",
         "        result.status = FAIL\n",
+        "    release()\n",
         "    return result\n",
         "\n",
         "#### API / rarbg api\n",
@@ -4101,11 +4112,7 @@
         "    filterdownloaded = imdbfilterdownloadded_checkbox.value\n",
         "    filterwatched = imdbfilterwatched_checkbox.value \n",
         "    \n",
-        "    sites = []\n",
-        "    if imdbdownload1337x_checkbox.value:\n",
-        "        sites.append(X1337X)\n",
-        "    sitesort = SEEDERSSORT \n",
-        "    siteorder = DESCORDER \n",
+        "    sites = [X1337X]\n",
         "    sitecategory = getsitecategory(type_category[type_], sites[0])\n",
         "    searchparameters = imdbsearchparams_text.value\n",
         "    replaceandmerge = imdbreplaceandmergeoldfiles_checkbox.value \n",
@@ -4124,10 +4131,9 @@
         "                    filterdownloaded = filterdownloaded, top250= top250, top1000= top1000, oscarwinner= oscarwinner,\n",
         "                    bestpicturewinner= bestpicturewinner, bestdirectorwinner= bestdirectorwinner, englishonly= englishonly,\n",
         "                    animationtitles= animationtitles, internationaltitles= internationaltitles, indianmovies= indianmovies,\n",
-        "                    sites= sites, sitecategory= sitecategory, sitesort= sitesort, siteorder= siteorder, siteparameters= searchparameters,\n",
+        "                    sites= sites, sitecategory= sitecategory, siteparameters= searchparameters,\n",
         "                    attrs= attrs)\n",
         "    result: IMDBResult = searchIMDB(params)\n",
-        "    appstate.searchresults.append(result)\n",
         "    imdbresultview = getsearchresultview(result)\n",
         "    switchview(nav[IMDB_TAB], imdbresultview)\n",
         "\n",
@@ -4378,6 +4384,9 @@
         "        .lm-Widget.p-Widget.lm-TabBar.p-TabBar.p-TabPanel-tabBar.widget-tab-bar {\n",
         "            padding-left: 150px !important;\n",
         "        }\n",
+        "        .widget-label.label-flex {\n",
+        "            display: flex;\n",
+        "        }\n",
         "        .jupyter-button{\n",
         "            border-radius: 6px !important;\n",
         "            transition: .4s;\n",
@@ -4404,19 +4413,50 @@
         "            bottom: 0;\n",
         "            height: 3px;\n",
         "        }           \n",
-        "                               \n",
+        "\n",
+        "        input[type=\"checkbox\"] {\n",
+        "            margin: 3px 5px !important;\n",
+        "            border: none !important;\n",
+        "            position: relative;\n",
+        "            width: 40px;\n",
+        "            height: 20px;\n",
+        "            -webkit-appearance: none;\n",
+        "            background: #c6c6c6;\n",
+        "            outline: none;\n",
+        "            border-radius: 20px;\n",
+        "            box-shadow: inset 0 0 5px rgba(255, 0, 0, 0.2);\n",
+        "            transition: 0.7s;\n",
+        "        }\n",
+        "        input:checked[type=\"checkbox\"] {\n",
+        "        background: #03a9f4;\n",
+        "        }\n",
+        "        input[type=\"checkbox\"]:before {\n",
+        "        content: '';\n",
+        "        border: 1px solid #d0d0d0c4;\n",
+        "        position: absolute;\n",
+        "        width: 20px;\n",
+        "        height: 20px;\n",
+        "        border-radius: 20px;\n",
+        "        top: -1px;\n",
+        "        left:0;\n",
+        "        background: #ffffff;\n",
+        "        transform: scale(1.1);\n",
+        "        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);\n",
+        "        transition: .5s;\n",
+        "        }\n",
+        "        input:checked[type=\"checkbox\"]:before {\n",
+        "        left: 20px;\n",
+        "        }\n",
         "        @keyframes info-progress {\n",
         "            0% {\n",
         "                background-color: #03b6cc;\n",
         "                box-shadow: 1px 1px 3px 1px rgb(3 182 204 / 30%);\n",
         "            }\n",
-        "\n",
         "            50% {\n",
         "                background-color:\n",
         "                    #00bcd4db;\n",
         "                box-shadow: 1px 1px 7px 3px rgb(5 153 204 / 35%);\n",
         "            }\n",
-        "\n",
         "            100% {\n",
         "                background-color: #03b6cc;\n",
         "                box-shadow: 1px 1px 3px 1px rgb(3 182 204 / 30%);\n",
@@ -4427,13 +4467,11 @@
         "                background-color: #ff9800;\n",
         "                box-shadow: 1px 1px 3px 1px rgb(255 152 0 / 30%);\n",
         "            }\n",
-        "\n",
         "            50% {\n",
         "                background-color:\n",
         "                    #ff9800c9;\n",
         "                box-shadow: 1px 1px 7px 3px rgb(255 152 0 / 41%);\n",
         "            }\n",
-        "\n",
         "            100% {\n",
         "                background-color: #ff9800;\n",
         "                box-shadow: 1px 1px 3px 1px rgb(255 152 0 / 30%);\n",
@@ -4512,11 +4550,13 @@
         "t2labels_style = {'font_size': '18px'}\n",
         "t2controls_layout = {'margin':'0 0 0 10px', 'width':'400px', 'justify_items': 'flex-start', 'justify_content': 'flex-start', 'align_content': 'flex-start'}\n",
         "t2controls_style = {'font_size': '16px', 'description_width':'150px'}\n",
-        "formcheckboxs_layout = Layout(margin= '5px 0 0 10px', justify_items= 'flex-start', justify_content= 'flex-start',align_content= 'flex-start')\n",
+        "searchcheckboxs_layout = {'margin': '5px 0 0 10px', 'justify_items': 'flex-start', 'justify_content': 'flex-start', 'align_content': 'flex-start'}\n",
         "bigbtn_style = {'font_size':'16px', 'font_weight':'600'}\n",
         "bigbtn_layout = {'width':'120px', 'height':'50px', 'margin': '0 0 8px 0'}\n",
         "top_btn_layout = {\"width\": '100px', 'height': '30px', 'margin': '0 0 0 60px'}\n",
         "\n",
+        "imdbcheckboxlayout = {}\n",
+        "checkboxlabellayout = {}\n",
         "\n",
         "startpause_btn = Button(disabled= True, description=\"Start\", style= bigbtn_style, layout= top_btn_layout)\n",
         "startpause_btn.layout.display =  'none'\n",
@@ -4553,11 +4593,13 @@
         "searchorder_dropdown = Dropdown(description= \"Results Order\", value= DESCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchorder_hbox = HBox((searchorder_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "searchreplaceandmerge_checkbox = Checkbox(description= \"Replace Existing\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "searchreplace_hbox = HBox((searchreplaceandmerge_checkbox,), layout= t_formrow_layout)\n",
+        "searchreplaceandmerge_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
+        "searchreplaceandmerge_checkbox = Checkbox(value= False, layout= searchcheckboxs_layout)\n",
+        "searchreplace_hbox = HBox((searchreplaceandmerge_label, searchreplaceandmerge_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "searchbackup_checkbox = Checkbox(description= \"Save Backup\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "searchbackup_hbox = HBox((searchbackup_checkbox,), layout= t_formrow_layout)\n",
+        "searchbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
+        "searchbackup_checkbox = Checkbox(value= False, layout= searchcheckboxs_layout)\n",
+        "searchbackup_hbox = HBox((searchbackup_label, searchbackup_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_hbox.layout.display = None\n",
         "\n",
         "searchsaveas_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
@@ -4613,16 +4655,19 @@
         "imdbminrating_float = widgets.BoundedFloatText(description= \"Min\", value=7, min=1, max=10, step= 0.1, layout= numeric_layout, style= numeric_style)\n",
         "imdbmaxrating_float = widgets.BoundedFloatText(description= \"Max\", value=10, min=1, max=10, step= 0.1, layout= numeric_layout, style= numeric_style)\n",
         "imdbratings_hbox = HBox((imdbrating_label, imdbminrating_float, imdbmaxrating_float), layout= t_formrow_layout)\n",
+        "imdbrating_label.add_class('label-flex')\n",
         "\n",
         "imdbvotes_label = Label(value= \"Votes \", layout= numericlabel_layout)\n",
         "imdbminvotes_int = widgets.BoundedIntText(description= \"Min\", value=0, min= 0, step= 1, layout= numeric_layout, style= numeric_style)\n",
         "imdbmaxvotes_int = widgets.BoundedIntText(description= \"Max\", value=0, min= 0, step= 1, layout= numeric_layout, style= numeric_style)\n",
         "imdbvotes_hbox = HBox((imdbvotes_label, imdbminvotes_int, imdbmaxvotes_int), layout= t_formrow_layout)\n",
+        "imdbvotes_label.add_class('label-flex')\n",
         "\n",
         "imdbruntime_label = Label(value= \"Run Time \", layout= numericlabel_layout)\n",
         "imdbminruntime_int = widgets.BoundedIntText(description= \"Min\", value= 0, min= 0, max= 10000, step= 1, layout= numeric_layout, style= numeric_style)\n",
         "imdbmaxruntime_int = widgets.BoundedIntText(description= \"Max\", value= 0, min= 0, max= 10000, step= 1, layout= numeric_layout, style= numeric_style)\n",
         "imdbruntime_hbox = HBox((imdbruntime_label, imdbminruntime_int, imdbmaxruntime_int), layout= t_formrow_layout)\n",
+        "imdbruntime_label.add_class('label-flex')\n",
         "\n",
         "imdbinlist_text = Text(description= \"In Lists\", value= \"\", placeholder= \"Comma separated list.\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbinlist_hbox = HBox((imdbinlist_text,),layout= t_formrow_layout)\n",
@@ -4630,47 +4675,57 @@
         "imdbnotinlist_text = Text(description= \"Not In List\", value= \"\", placeholder= \"Comma separated list.\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbnotinlist_hbox = HBox((imdbnotinlist_text,),layout= t_formrow_layout)\n",
         "\n",
-        "imdbtop250_checkbox = Checkbox(description= \"In Top 250\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbtop250_hbox = HBox((imdbtop250_checkbox,), layout= t_formrow_layout)\n",
+        "imdbtop250_label = Label(\"In Top 250\", layout= checkboxlabellayout)\n",
+        "imdbtop250_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbtop250_hbox = HBox((imdbtop250_label, imdbtop250_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbtop1000_checkbox = Checkbox(description= \"In Top 1000\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbtop1000_hbox = HBox((imdbtop1000_checkbox,), layout= t_formrow_layout)\n",
+        "imdbtop1000_label = Label(\"In Top 1000\", layout= checkboxlabellayout)\n",
+        "imdbtop1000_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbtop1000_hbox = HBox((imdbtop1000_label, imdbtop1000_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdboscarwinner_checkbox = Checkbox(description= \"Oscar Winner\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdboscarwinner_hbox = HBox((imdboscarwinner_checkbox,), layout= t_formrow_layout)\n",
+        "imdboscarwinner_label = Label(\"Oscar Winner\", layout= checkboxlabellayout)\n",
+        "imdboscarwinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdboscarwinner_hbox = HBox((imdboscarwinner_label, imdboscarwinner_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbbestpicturewinner_checkbox = Checkbox(description= \"Best Picture Winner\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbbestpicturewinner_hbox = HBox((imdbbestpicturewinner_checkbox,), layout= t_formrow_layout)\n",
+        "imdbbestpicturewinner_label = Label(\"Best Picture Winner\", layout= checkboxlabellayout)\n",
+        "imdbbestpicturewinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbestpicturewinner_hbox = HBox((imdbbestpicturewinner_label, imdbbestpicturewinner_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbbestdirectorwinner_checkbox = Checkbox(description= \"Best Director Winner\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbbestdirectorwinner_hbox = HBox((imdbbestdirectorwinner_checkbox,), layout= t_formrow_layout)\n",
+        "imdbbestdirectorwinner_label = Label(\"Best Director Winner\", layout= checkboxlabellayout)\n",
+        "imdbbestdirectorwinner_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbestdirectorwinner_hbox = HBox((imdbbestdirectorwinner_label, imdbbestdirectorwinner_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbenglishonly_checkbox = Checkbox(description= \"Only English Titles\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbenglishonly_hbox = HBox((imdbenglishonly_checkbox,), layout= t_formrow_layout)\n",
+        "imdbenglishonly_label = Label(\"Only English Titles\", layout= checkboxlabellayout)\n",
+        "imdbenglishonly_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbenglishonly_hbox = HBox((imdbenglishonly_label, imdbenglishonly_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbanimationtitles_checkbox = Checkbox(description= \"Animation Titles\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbanimationtitles_hbox = HBox((imdbanimationtitles_checkbox,), layout= t_formrow_layout)\n",
+        "imdbanimationtitles_label = Label(\"Animation Titles\", layout= checkboxlabellayout)\n",
+        "imdbanimationtitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbanimationtitles_hbox = HBox((imdbanimationtitles_label, imdbanimationtitles_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbinternationaltitles_checkbox = Checkbox(description= \"International Titles\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbinternationaltitles_hbox = HBox((imdbinternationaltitles_checkbox,), layout= t_formrow_layout)\n",
+        "imdbinternationaltitles_label = Label(\"International Titles\", layout= checkboxlabellayout)\n",
+        "imdbinternationaltitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbinternationaltitles_hbox = HBox((imdbinternationaltitles_label, imdbinternationaltitles_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbindiantitles_checkbox = Checkbox(description= \"Indian Titles\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbindiantitles_hbox = HBox((imdbindiantitles_checkbox,), layout= t_formrow_layout)\n",
+        "imdbindiantitles_label = Label(\"Indian Titles\", layout= checkboxlabellayout)\n",
+        "imdbindiantitles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbindiantitles_hbox = HBox((imdbindiantitles_label, imdbindiantitles_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbfilterdownloadded_checkbox = Checkbox(description= \"Filter Downloaded\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbfilterdownloadded_hbox = HBox((imdbfilterdownloadded_checkbox,), layout= t_formrow_layout)\n",
+        "imdbfilterdownloadded_label = Label(\"Filter Downloaded\", layout= checkboxlabellayout)\n",
+        "imdbfilterdownloadded_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbfilterdownloadded_hbox = HBox((imdbfilterdownloadded_label, imdbfilterdownloadded_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbfilterwatched_checkbox = Checkbox(description= \"Filter Watched\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbfilterwatched_hbox = HBox((imdbfilterwatched_checkbox,), layout= t_formrow_layout)\n",
+        "imdbfilterwatched_label = Label(\"Filter Watched\", layout= checkboxlabellayout)\n",
+        "imdbfilterwatched_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbfilterwatched_hbox = HBox((imdbfilterwatched_label, imdbfilterwatched_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbdownload1337x_checkbox = Checkbox(description= \"Download From 1337x\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbdownload1337x_hbox = HBox((imdbdownload1337x_checkbox,), layout= t_formrow_layout)\n",
+        "imdbreplaceandmergeoldfiles_label = Label(\"Replace and Merge Old Files\", layout= checkboxlabellayout)\n",
+        "imdbreplaceandmergeoldfiles_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbreplaceandmergeoldfiles_hbox = HBox((imdbreplaceandmergeoldfiles_label, imdbreplaceandmergeoldfiles_checkbox), layout= t_formrow_layout)\n",
         "\n",
-        "imdbreplaceandmergeoldfiles_checkbox = Checkbox(description= \"Replace and Merge Old Files\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbreplaceandmergeoldfiles_hbox = HBox((imdbreplaceandmergeoldfiles_checkbox,), layout= t_formrow_layout)\n",
-        "\n",
-        "imdbbackup_checkbox = Checkbox(description= \"Save Backup\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
-        "imdbbackup_hbox = HBox((imdbbackup_checkbox,), layout= t_formrow_layout)\n",
+        "imdbbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
+        "imdbbackup_checkbox = Checkbox(value= False, layout= imdbcheckboxlayout)\n",
+        "imdbbackup_hbox = HBox((imdbbackup_checkbox, imdbbackup_label), layout= t_formrow_layout)\n",
         "imdbbackup_hbox.layout.display = None\n",
         "\n",
         "imdbsearchparams_text = Text(description= \"Search Parameters\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
@@ -4684,11 +4739,13 @@
         "imdbrsearchviewcol1_vbox = VBox((imdbkeyword_hbox, imdbtype_hbox, imdbsort_hbox, imdborder_hbox, imdbstartdate_hbox, imdbenddate_hbox,\n",
         "                            imdbratings_hbox, imdbvotes_hbox, imdbruntime_hbox), layout= imdbview1collayout)\n",
         "\n",
-        "imdbrsearchviewcol2_vbox = VBox((imdbinlist_hbox, imdbnotinlist_hbox, imdbsearchparams_hbox, imdbdownload1337x_hbox, imdbenglishonly_hbox,\n",
-        "                            imdbanimationtitles_hbox, imdbinternationaltitles_hbox), layout= imdbview1collayout)\n",
+        "imdbrsearchviewcol2_vbox = VBox((imdbinlist_hbox, imdbnotinlist_hbox, imdbsearchparams_hbox, imdbfilterdownloadded_hbox, imdbfilterwatched_hbox,\n",
+        "                            imdbreplaceandmergeoldfiles_hbox, imdbenglishonly_hbox,\n",
+        "                            ), layout= imdbview1collayout)\n",
         "\n",
-        "imdbrsearchviewcol3_vbox = VBox((imdbindiantitles_hbox, imdbtop250_hbox, imdbtop1000_hbox, imdboscarwinner_hbox, imdbbestpicturewinner_hbox,\n",
-        "                            imdbbestdirectorwinner_hbox, imdbfilterdownloadded_hbox, imdbfilterwatched_hbox, imdbreplaceandmergeoldfiles_hbox), layout= imdbview1collayout)\n",
+        "imdbrsearchviewcol3_vbox = VBox((imdbinternationaltitles_hbox, imdbindiantitles_hbox, imdbanimationtitles_hbox, imdbtop250_hbox,\n",
+        "                                 imdbtop1000_hbox, imdboscarwinner_hbox, imdbbestpicturewinner_hbox,\n",
+        "                            imdbbestdirectorwinner_hbox), layout= imdbview1collayout)\n",
         "\n",
         "imdbsearchviewinnercontainer_hbox = HBox((imdbrsearchviewcol1_vbox, imdbrsearchviewcol2_vbox, imdbrsearchviewcol3_vbox),\n",
         "                                         layout= {\"width\": \"100%\", \"height\": \"500px\"})\n",
@@ -4732,10 +4789,10 @@
         "addtype_dropdown = Dropdown(description= \"Download Type\", value= MOVIE ,options= [('General', GENERAL), ('Movie', MOVIE), ('Episode', EPISODE), ('Season', SEASON), ('TV Show', SHOW), ('Music Album', ALBUM), ('Song', TRACK)], layout= t2controls_layout, style= t2controls_style)\n",
         "addtype_hbox = HBox((addtype_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "addreplacemerge_checkbox = Checkbox(description= \"Replace and Merge Existing\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
+        "addreplacemerge_checkbox = Checkbox(description= \"Replace and Merge Existing\", value= False, layout= searchcheckboxs_layout, style= t2controls_style)\n",
         "addreplacemerge_hbox = HBox((addreplacemerge_checkbox,), layout= t_formrow_layout)\n",
         "\n",
-        "addbackup_checkbox = Checkbox(description= \"Save Backup\", value= False, layout= formcheckboxs_layout, style= t2controls_style)\n",
+        "addbackup_checkbox = Checkbox(description= \"Save Backup\", value= False, layout= searchcheckboxs_layout, style= t2controls_style)\n",
         "addbackup_hbox = HBox((addbackup_checkbox,), layout= t_formrow_layout)\n",
         "\n",
         "addcustomname_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
